--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -14,4 +14,6 @@
     <dimen name="action_toolbar_list_padding">72dp</dimen>
 
     <dimen name="screen_edge_margin">16dp</dimen>
+
+    <dimen name="extracted_text_bottom_sheet_margin">20dp</dimen>
 </resources>
